# chess_backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml
db/: chess.db  chess.db-shm  chess.db-wal
db/migrations/: 20230803142042_piece_colors.down.sql  20230803142042_piece_colors.up.sql  20230803142234_piece_names.down.sql  20230803142234_piece_names.up.sql  20230803142320_pieces.down.sql  20230803142320_pieces.up.sql  20230803142408_row_col.down.sql  20230803142408_row_col.up.sql  20230809135952_board.down.sql  20230809135952_board.up.sql  20230810142226_board_counter.down.sql  20230810142226_board_counter.up.sql  20230830173206_player_turn_table.down.sql  20230830173206_player_turn_table.up.sql
migrations/: 20230802115000_piece_colors.sql  20230803111434_piece_names.sql  20230803111504_pieces.sql  20230803111554_row_col.sql
src/: db.rs  filters.rs  lib.rs  main.rs  models.rs  routes.rs
src/filters/: mod.rs
src/models/: mod.rs  pieces.rs
