[package]
name = "chess_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
cookie = "0.17.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
sqlx = {version="0.7.1", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.28.2", features = ["full"] }
unicode-width = "0.1.10"
uuid = { version = "1.3.4", features = ["v4"] }
warp = "0.3.5"

[build-dependencies]
sqlx = {version="0.7.1", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.28.2", features = ["full"] }
